# choreo-tests

./: README.md
ffmpeg/: Dockerfile  go.mod  main.go  openapi.yaml
ffmpeg/.choreo/: component.yaml
internal-api/: README.md  main.py  openapi.yaml  pyproject.toml  requirements.txt
internal-api/.choreo/: component.yaml
mocktopus/: Dockerfile  README.md  main.py  openapi.yaml  pyproject.toml  requirements.txt  run.py
mocktopus/.choreo/: component.yaml
news-aggregator/: Dockerfile  main.py  openapi.yaml  pyproject.toml
news-aggregator/.choreo/: component.yaml
pandoc/: Dockerfile  go.mod  main.go  openapi.yaml
pandoc/.choreo/: component.yaml
retirement-api/: Dockerfile  go.mod  main.go  openapi.yaml
retirement-api/.choreo/: component.yaml
ws-relay/: Dockerfile  asyncapi.yaml  go.mod  main.go
ws-relay/.choreo/: component.yaml
