[project]
name = "news-aggregator"
version = "1.0.0"
description = "News aggregation API with entity extraction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "aiosqlite>=0.19.0",
    "feedparser>=6.0.10",
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "apscheduler>=3.10.4",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
