[project]
name = "news-aggregator"
version = "1.0.0"
description = "News aggregation API with entity extraction"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.7",
    "uvicorn==0.34.0",
    "aiosqlite==0.20.0",
    "feedparser==6.0.11",
    "spacy==3.8.3",
    "sentence-transformers==3.3.1",
    "numpy==2.2.2",
    "apscheduler==3.11.0",
    "slowapi==0.1.9",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
